--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -48,7 +48,27 @@
   text-transform: uppercase;
   line-height: 20px;
   cursor: pointer;
+  position: relative;
 }
+
+.header__menu li::after{
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 2px;
+  width: 0;
+  background-color: var(--primary-color); /* Initial color */
+  transition: width 0.4s ease-out;
+}
+
+.header__menu li:hover::after {
+  width: 100%;
+  background-color: var(--primary-color);/* Hover color */
+}
+
 
 .header__menu li img {
   width: 24px;
